--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ bevy = { version = "0.9", features = ["wayland"] }
 bevy_rapier3d = { version = "0.20", features = ["debug-render", "simd-stable"] }
 bevy_prototype_debug_lines = { version = "0.9", features = ["3d"] }
 bevy-inspector-egui = "0.17"
-bevy_dolly = { git = "https://github.com/BlackPhlox/bevy_dolly.git", rev = "c8d03a17f5e2ff78d8625df28230e215a023d643"}
+bevy_dolly = { git = "https://github.com/BlackPhlox/bevy_dolly" }
 leafwing-input-manager = "0.7.1"
 
 enum-map = "2.4.1"
